// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx server transform > should work with CSS-in-JS in server 1`] = `
"import { ssrClass as _ssrClass$, convertToString as _convertToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$ = ["<div", " data-styled>", "</div>"];
const StyledComponent = __props => _render$(_tmpl$, _getHydrationKey$(), _ssrClass$(__props.className), _convertToString$(__props.children));
const element = _createSSGComponent$(StyledComponent, {
  "className": "generated-class",
  "children": ["Styled Content"]
});"
`;

exports[`jsx server transform > should work with async data in server 1`] = `
"import { convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$ = ["<div>", "</div>"];
const AsyncComponent = async __props => {
  const result = await __props.data;
  return _render$(_tmpl$, _getHydrationKey$(), _convertTextChildToString$(result));
};
const element = _createSSGComponent$(AsyncComponent, {
  "data": Promise.resolve('async content')
});"
`;

exports[`jsx server transform > should work with bind api 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div><p>Paragraph 1</p><p>Paragraph 2</p></div>"];
const value = 1;
_render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > should work with comment in JSX 1`] = `
"import { signal as _signal$ } from "essor";
import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div><p>Paragraph 1</p><p>Paragraph 2</p></div>"];
const $value = _signal$(1);
_render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > should work with conditional rendering in server 1`] = `
"import { markSafeHtml as _markSafeHtml$, convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$4 = ["<span>False</span>"];
const _tmpl$3 = ["<span>True</span>"];
const _tmpl$2 = ["<p>Visible Content</p>"];
const _tmpl$ = ["<div>", "<!--0-->", "<!--1--></div>"];
const isVisible = true;
const element = _render$(_tmpl$, _getHydrationKey$(), _convertTextChildToString$(isVisible && _markSafeHtml$(_render$(_tmpl$2, _getHydrationKey$()))), _convertTextChildToString$(isVisible ? _markSafeHtml$(_render$(_tmpl$3, _getHydrationKey$())) : _markSafeHtml$(_render$(_tmpl$4, _getHydrationKey$()))));"
`;

exports[`jsx server transform > should work with context in server 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$ = ["<div data-theme=\\"dark\\">Themed Content</div>"];
const ThemeContext = {
  Provider: ({
    value,
    children
  }) => children
};
const element = _createSSGComponent$(ThemeContext.Provider, {
  "value": "dark",
  "children": [() => _render$(_tmpl$, _getHydrationKey$())]
});"
`;

exports[`jsx server transform > should work with data fetching in server 1`] = `
"import { convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$ = ["<div data-ssr-data>", "</div>"];
const DataComponent = __props => _render$(_tmpl$, _getHydrationKey$(), _convertTextChildToString$(JSON.stringify(__props.data)));
const element = _createSSGComponent$(DataComponent, {
  "data": {
    key: 'value'
  }
});"
`;

exports[`jsx server transform > should work with error handling in server 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div>Error Page</div>"];
const _tmpl$ = ["<div>Protected Content</div>"];
const ErrorBoundary = ({
  fallback,
  children
}) => {
  try {
    return children;
  } catch (error) {
    return fallback;
  }
};
const element = _createSSGComponent$(ErrorBoundary, {
  "fallback": _render$(_tmpl$2, _getHydrationKey$()),
  "children": [() => _render$(_tmpl$, _getHydrationKey$())]
});"
`;

exports[`jsx server transform > should work with event handlers in server 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<button>Click me</button>"];
const handleClick = () => console.log('clicked');
const element = _render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > should work with head management in server 1`] = `
"import { convertToString as _convertToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$3 = ["<meta name=\\"description\\" content=\\"Page description\\"/>"];
const _tmpl$2 = ["<title>Page Title</title>"];
const _tmpl$ = ["<head data-ssr>", "</head>"];
const Head = __props => _render$(_tmpl$, _getHydrationKey$(), _convertToString$(__props.children));
const element = _createSSGComponent$(Head, {
  "children": [() => _render$(_tmpl$2, _getHydrationKey$()), () => _render$(_tmpl$3, _getHydrationKey$())]
});"
`;

exports[`jsx server transform > should work with hydration attributes 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div data-hydrate=\\"true\\">Hydration Content</div>"];
const element = _render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > should work with list rendering in server 1`] = `
"import { For as _For$ } from "essor";
import { convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<ul>", "</ul>"];
const _tmpl$ = ["<li>", "</li>"];
const items = ['Item 1', 'Item 2', 'Item 3'];
const element = _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(_For$, {
  get each() {
    return items;
  },
  children: (item, index) => _render$(_tmpl$, _getHydrationKey$(), _convertTextChildToString$(item)),
  key: (item, index) => index
}));"
`;

exports[`jsx server transform > should work with nested components and props in server 1`] = `
"import { convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div>", "<!--0-->", "<!--1--></div>"];
const _tmpl$ = ["<div>Name: ", "<!--0-->, Age: ", "<!--1--></div>"];
const Child = __props => _render$(_tmpl$, _getHydrationKey$(), _convertTextChildToString$(__props.name), _convertTextChildToString$(__props.age));
const Parent = () => _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(Child, {
  "name": "John",
  "age": "25"
}), _createSSGComponent$(Child, {
  "name": "Jane",
  "age": "23"
}));"
`;

exports[`jsx server transform > should work with static API routes 1`] = `
"import { ssrAttr as _ssrAttr$, convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$ = ["<div", " data-api>", "</div>"];
const StaticApi = __props => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-endpoint", __props.endpoint), _convertTextChildToString$(__props.handler));
const element = _createSSGComponent$(StaticApi, {
  "endpoint": "/api/static",
  "handler": "export default function handler(req, res) { res.json({ data: 'static' }) }"
});"
`;

exports[`jsx server transform > should work with static data fetching in server 1`] = `
"import { convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$ = ["<div data-static>", "</div>"];
const StaticDataComponent = __props => _render$(_tmpl$, _getHydrationKey$(), _convertTextChildToString$(JSON.stringify(__props.data)));
const element = _createSSGComponent$(StaticDataComponent, {
  "data": {
    key: 'value'
  }
});"
`;

exports[`jsx server transform > should work with static environment variables 1`] = `
"import { For as _For$ } from "essor";
import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div data-env>", "</div>"];
const _tmpl$ = ["<div", "", "></div>"];
const StaticEnv = __props => _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(_For$, {
  get each() {
    return Object.entries(__props.env);
  },
  children: ([key, value]) => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-env-key", key), _ssrAttr$("data-env-value", value)),
  key: ([key, value]) => key
}));
const element = _createSSGComponent$(StaticEnv, {
  "env": {
    NEXT_PUBLIC_API_URL: 'https://api.example.com',
    NEXT_PUBLIC_CDN_URL: 'https://cdn.example.com'
  }
});"
`;

exports[`jsx server transform > should work with static error pages 1`] = `
"import { ssrAttr as _ssrAttr$, convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$3 = ["<div", " data-error>", "", "</div>"];
const _tmpl$2 = ["<p>", "</p>"];
const _tmpl$ = ["<h1>", "</h1>"];
const StaticError = __props => _render$(_tmpl$3, _getHydrationKey$(), _ssrAttr$("data-code", __props.code), _render$(_tmpl$, "", _convertTextChildToString$(__props.code)), _render$(_tmpl$2, "", _convertTextChildToString$(__props.message)));
const element = _createSSGComponent$(StaticError, {
  "code": "404",
  "message": "Page not found"
});"
`;

exports[`jsx server transform > should work with static headers 1`] = `
"import { For as _For$ } from "essor";
import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div data-headers>", "</div>"];
const _tmpl$ = ["<div", "", "></div>"];
const StaticHeaders = __props => _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(_For$, {
  get each() {
    return Object.entries(__props.headers);
  },
  children: ([key, value]) => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-header-key", key), _ssrAttr$("data-header-value", value)),
  key: ([key, value]) => key
}));
const element = _createSSGComponent$(StaticHeaders, {
  "headers": {
    'Cache-Control': 'public, max-age=31536000',
    'X-Frame-Options': 'DENY'
  }
});"
`;

exports[`jsx server transform > should work with static image optimization 1`] = `
"import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$ = ["<img", "", " data-static-image/>"];
const StaticImage = __props => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("src", __props.src), _ssrAttr$("alt", __props.alt));
const element = _createSSGComponent$(StaticImage, {
  "src": "/static/image.jpg",
  "alt": "Static Image"
});"
`;

exports[`jsx server transform > should work with static locales 1`] = `
"import { For as _For$ } from "essor";
import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div", ">", "</div>"];
const _tmpl$ = ["<div", "", "></div>"];
const StaticLocale = __props => _render$(_tmpl$2, _getHydrationKey$(), _ssrAttr$("data-locale", __props.locale), _createSSGComponent$(_For$, {
  get each() {
    return Object.entries(__props.messages);
  },
  children: ([key, value]) => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-message-key", key), _ssrAttr$("data-message-value", value)),
  key: ([key, value]) => key
}));
const element = _createSSGComponent$(StaticLocale, {
  "locale": "en",
  "messages": {
    hello: 'Hello',
    welcome: 'Welcome to our site'
  }
});"
`;

exports[`jsx server transform > should work with static manifest.json 1`] = `
"import { For as _For$ } from "essor";
import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div data-manifest>", "</div>"];
const _tmpl$ = ["<div", "", "></div>"];
const StaticManifest = __props => _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(_For$, {
  get each() {
    return Object.entries(__props.manifest);
  },
  children: ([key, value]) => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-manifest-key", key), _ssrAttr$("data-manifest-value", value)),
  key: ([key, value]) => key
}));
const element = _createSSGComponent$(StaticManifest, {
  "manifest": {
    name: 'My Static App',
    short_name: 'App',
    start_url: '/',
    display: 'standalone',
    background_color: '#ffffff',
    theme_color: '#000000'
  }
});"
`;

exports[`jsx server transform > should work with static metadata 1`] = `
"import { convertTextChildToString as _convertTextChildToString$, render as _render$, ssrAttr as _ssrAttr$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$3 = ["<head data-static-metadata>", "", "</head>"];
const _tmpl$2 = ["<meta", " name=\\"description\\"/>"];
const _tmpl$ = ["<title>", "</title>"];
const StaticMetadata = __props => _render$(_tmpl$3, _getHydrationKey$(), _render$(_tmpl$, "", _convertTextChildToString$(__props.metadata.title)), _render$(_tmpl$2, "", _ssrAttr$("content", __props.metadata.description)));
const element = _createSSGComponent$(StaticMetadata, {
  "metadata": {
    title: 'Static Page',
    description: 'Static page description'
  }
});"
`;

exports[`jsx server transform > should work with static middleware 1`] = `
"import { convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$ = ["<div data-middleware>", "</div>"];
const StaticMiddleware = __props => _render$(_tmpl$, _getHydrationKey$(), _convertTextChildToString$(__props.middleware));
const element = _createSSGComponent$(StaticMiddleware, {
  "middleware": "export function middleware(request) { return NextResponse.next() }"
});"
`;

exports[`jsx server transform > should work with static paths generation 1`] = `
"import { For as _For$ } from "essor";
import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div data-paths>", "</div>"];
const _tmpl$ = ["<div", "></div>"];
const StaticPathsComponent = __props => _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(_For$, {
  get each() {
    return __props.paths;
  },
  children: path => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-path", path)),
  key: path => path
}));
const element = _createSSGComponent$(StaticPathsComponent, {
  "paths": ['/page1', '/page2']
});"
`;

exports[`jsx server transform > should work with static props generation 1`] = `
"import { For as _For$ } from "essor";
import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div data-props>", "</div>"];
const _tmpl$ = ["<div", "", "></div>"];
const StaticPropsComponent = __props => _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(_For$, {
  get each() {
    return Object.entries(__props.props);
  },
  children: ([key, value]) => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-prop-key", key), _ssrAttr$("data-prop-value", value)),
  key: ([key, value]) => key
}));
const element = _createSSGComponent$(StaticPropsComponent, {
  "props": {
    title: 'Page Title'
  }
});"
`;

exports[`jsx server transform > should work with static redirects 1`] = `
"import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$ = ["<div", "", " data-redirect></div>"];
const StaticRedirect = __props => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-from", __props.from), _ssrAttr$("data-to", __props.to));
const element = _createSSGComponent$(StaticRedirect, {
  "from": "/old",
  "to": "/new"
});"
`;

exports[`jsx server transform > should work with static rewrites 1`] = `
"import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$ = ["<div", "", " data-rewrite></div>"];
const StaticRewrite = __props => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-source", __props.source), _ssrAttr$("data-destination", __props.destination));
const element = _createSSGComponent$(StaticRewrite, {
  "source": "/api",
  "destination": "/api/v1"
});"
`;

exports[`jsx server transform > should work with static robots.txt 1`] = `
"import { For as _For$ } from "essor";
import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div data-robots>", "</div>"];
const _tmpl$ = ["<div", "></div>"];
const StaticRobots = __props => _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(_For$, {
  get each() {
    return __props.rules;
  },
  children: (rule, index) => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-rule", rule)),
  key: (rule, index) => index
}));
const element = _createSSGComponent$(StaticRobots, {
  "rules": ['User-agent: *', 'Allow: /', 'Disallow: /private/']
});"
`;

exports[`jsx server transform > should work with static security headers 1`] = `
"import { For as _For$ } from "essor";
import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div data-security>", "</div>"];
const _tmpl$ = ["<div", "", "></div>"];
const StaticSecurity = __props => _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(_For$, {
  get each() {
    return Object.entries(__props.headers);
  },
  children: ([key, value]) => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-security-key", key), _ssrAttr$("data-security-value", value)),
  key: ([key, value]) => key
}));
const element = _createSSGComponent$(StaticSecurity, {
  "headers": {
    'Content-Security-Policy': "default-src 'self'",
    'X-Content-Type-Options': 'nosniff',
    'X-XSS-Protection': '1; mode=block'
  }
});"
`;

exports[`jsx server transform > should work with static sitemap.xml 1`] = `
"import { For as _For$ } from "essor";
import { ssrAttr as _ssrAttr$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div data-sitemap>", "</div>"];
const _tmpl$ = ["<div", "></div>"];
const StaticSitemap = __props => _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(_For$, {
  get each() {
    return __props.urls;
  },
  children: (url, index) => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-url", url)),
  key: (url, index) => index
}));
const element = _createSSGComponent$(StaticSitemap, {
  "urls": ['https://example.com/', 'https://example.com/about', 'https://example.com/contact']
});"
`;

exports[`jsx server transform > should work with streaming server 1`] = `
"import { For as _For$ } from "essor";
import { ssrAttr as _ssrAttr$, convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<div>", "</div>"];
const _tmpl$ = ["<div", ">", "</div>"];
const StreamingComponent = __props => _render$(_tmpl$2, _getHydrationKey$(), _createSSGComponent$(_For$, {
  get each() {
    return __props.chunks;
  },
  children: (chunk, index) => _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("data-chunk", index), _convertTextChildToString$(chunk)),
  key: (chunk, index) => index
}));
const element = _createSSGComponent$(StreamingComponent, {
  "chunks": ['chunk1', 'chunk2']
});"
`;

exports[`jsx server transform > transforms JSX element with JSX fragment 1`] = `
"import { Fragment as _Fragment$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$2 = ["<p>Paragraph 2</p>"];
const _tmpl$ = ["<p>Paragraph 1</p>"];
const element = _createSSGComponent$(_Fragment$, {
  "children": [() => _render$(_tmpl$, _getHydrationKey$()), () => _render$(_tmpl$2, _getHydrationKey$())]
});"
`;

exports[`jsx server transform > transforms JSX element with JSX fragment as children 1`] = `
"import { Fragment as _Fragment$, render as _render$, getHydrationKey as _getHydrationKey$, createSSGComponent as _createSSGComponent$ } from "essor/server";
const _tmpl$3 = ["<div>", "</div>"];
const _tmpl$2 = ["<p>Paragraph 2</p>"];
const _tmpl$ = ["<p>Paragraph 1</p>"];
const element = _render$(_tmpl$3, _getHydrationKey$(), _createSSGComponent$(_Fragment$, {
  "children": [() => _render$(_tmpl$, _getHydrationKey$()), () => _render$(_tmpl$2, _getHydrationKey$())]
}));"
`;

exports[`jsx server transform > transforms JSX element with SVG tags 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<svg><circle cx=\\"50\\" cy=\\"50\\" r=\\"40\\" stroke=\\"black\\" stroke-width=\\"3\\" fill=\\"red\\"></circle></svg>"];
const element = _render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > transforms JSX element with attributes 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div class=\\"myClass\\" id=\\"myId\\">Hello, World!</div>"];
const element = _render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > transforms JSX element with boolean attribute 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<input disabled/>"];
const element = _render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > transforms JSX element with children 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div><p>Paragraph 1</p><p>Paragraph 2</p></div>"];
const element = _render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > transforms JSX element with class and style attributes 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div class=\\"myClass\\" style=\\"color:red;font-size:16px\\">Hello, World!</div>"];
const hasClass = true;
const style = {
  color: 'red',
  fontSize: '16px'
};
const element = _render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > transforms JSX element with conditional attributes 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div class=\\"myClass\\">Hello, World!</div>"];
const hasClass = true;
const element = _render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > transforms JSX element with dynamic expressions 1`] = `
"import { convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div>Hello, ", "<!--0-->!</div>"];
const name = 'John';
const element = _render$(_tmpl$, _getHydrationKey$(), _convertTextChildToString$(name));"
`;

exports[`jsx server transform > transforms JSX element with function components 1`] = `
"import { createSSGComponent as _createSSGComponent$, render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div>", "<!--0-->", "<!--1--></div>"];
const element = _render$(_tmpl$, _getHydrationKey$(), _createSSGComponent$(MyComponent, {
  "text": "Component 1"
}), _createSSGComponent$(MyComponent, {
  "text": "Component 2"
}));"
`;

exports[`jsx server transform > transforms JSX element with null and undefined attributes 1`] = `
"import { ssrAttr as _ssrAttr$, ssrClass as _ssrClass$, render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div", "", ">Hello, World!</div>"];
const element = _render$(_tmpl$, _getHydrationKey$(), _ssrAttr$("id", null), _ssrClass$(undefined));"
`;

exports[`jsx server transform > transforms JSX element with null and undefined children 1`] = `
"import { convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div>", "<p data-hk-idx=\\"0\\">Paragraph 1</p>", "<!--1-->", "<!--2--><p>Paragraph 2</p></div>"];
const element = _render$(_tmpl$, _getHydrationKey$(), _convertTextChildToString$(null), _convertTextChildToString$(undefined), _convertTextChildToString$(false));"
`;

exports[`jsx server transform > transforms JSX element with null and undefined in expressions 1`] = `
"import { convertTextChildToString as _convertTextChildToString$, render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$2 = ["<div>", "", "<p data-hk-idx=\\"0\\">Paragraph 2</p></div>"];
const _tmpl$ = ["<p>", "<!--0-->'s Profile</p>"];
const name = null;
const element = _render$(_tmpl$2, _getHydrationKey$(), _render$(_tmpl$, "", _convertTextChildToString$(name)), _convertTextChildToString$(undefined));"
`;

exports[`jsx server transform > transforms JSX element with self-closing tags 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div><img src=\\"image.jpg\\" alt=\\"Image 1\\"/><input type=\\"text\\"/><br/></div>"];
const element = _render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > transforms JSX element with spread attributes 1`] = `
"import { ssrSpread as _ssrSpread$, render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div", ">Hello, World!</div>"];
const props = {
  id: 'myId',
  class: 'myClass'
};
const element = _render$(_tmpl$, _getHydrationKey$(), _ssrSpread$(props));"
`;

exports[`jsx server transform > transforms JSX element with style attribute 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div style=\\"color:red;font-size:16px\\">Hello, World!</div>"];
const style = {
  color: 'red',
  fontSize: '16px'
};
const element = _render$(_tmpl$, _getHydrationKey$());"
`;

exports[`jsx server transform > transforms server JSX element with nested expressions and children 1`] = `
"import { convertTextChildToString as _convertTextChildToString$, render as _render$, markSafeHtml as _markSafeHtml$, getHydrationKey as _getHydrationKey$, ssrAttr as _ssrAttr$ } from "essor/server";
const _tmpl$4 = ["<li", ">Item ", "<!--0--></li>"];
const _tmpl$3 = ["<div class=\\"root\\">", "", "</div>"];
const _tmpl$2 = ["<ul>", "</ul>"];
const _tmpl$ = ["<p class=\\"John\\">itis:", "<!--0-->'s Profile</p>"];
const name = 'John';
const element = _render$(_tmpl$3, _getHydrationKey$(), _render$(_tmpl$, "", _convertTextChildToString$(name)), _render$(_tmpl$2, "", _convertTextChildToString$(Array.from({
  length: 3
}, (_, i) => _markSafeHtml$(_render$(_tmpl$4, _getHydrationKey$(), _ssrAttr$("key", i), _convertTextChildToString$(i + 1)))))));"
`;

exports[`jsx server transform > transforms simple JSX element 1`] = `
"import { render as _render$, getHydrationKey as _getHydrationKey$ } from "essor/server";
const _tmpl$ = ["<div>Hello, World!</div>"];
const element = _render$(_tmpl$, _getHydrationKey$());"
`;
